cartes pourquoi + textes + planning + sous-titres

--- a/app/views/pages/comment.html.erb
+++ b/app/views/pages/comment.html.erb
@@ -5,14 +5,14 @@
     <div class="header-padding-comment" >
       <div class="row">
         <div class="col-lg-6">
-          <h2 class="green-bg mb-4">Les objectifs du Défi</h2>
-          <p class="text">Le Défi consiste en l'<b>accompagnement structurel et individuel</b> des établissements participants dans <b>l’étude et la mise en place de solutions</b> techniques, organisationnelles et comportementales pour réduire leurs déchets.</p>
+          <h2 class="green-bg mb-4">Objectifs du Défi Zéro Déchet des pro</h2>
+          <p class="text">Le Défi consiste en l'<b>accompagnement structurel et personnalisé</b> des établissements participants dans <b>l’étude et la mise en place de solutions</b> techniques, organisationnelles et comportementales pour réduire leurs déchets.</p>
           <ul class="list mb-5 bullet-custom">
             <li class="my-2">
               <strong>Réduire la production de déchets de fonctionnement de 10%</strong>
             </li>
             <li class="my-2">
-              <strong>Mettre en place au moins 5 actions réalisées par la majorité des employés</strong>
+              <strong>Faire agir la majorité des salarié·e·s de votre structure sur au moins 5 actions</strong>
             </li>
             <li class="my-2">
               Réduire les coûts de gestion des déchets
@@ -66,7 +66,7 @@
         <h2 class="green-bg mb-4 mt-5" >Les déchets concernés</h2>
         <ul class="list mb-0 bullet-custom">
           <li class="my-2">
-            Emballages (bouteilles, cannettes etc)
+            Emballages (bouteilles, canettes etc)
           </li>
           <li class="my-2">
             Fournitures de bureau (papiers, stylos etc)
@@ -81,7 +81,7 @@
             Biodéchets (marc de café etc)
           </li>
           <li class="my-2">
-            mobilier, mégots, ampoules, piles, cartouches d'encre, produits d'entretien, cartons, palettes...
+            Mobilier, mégots, ampoules, piles, cartouches d'encre, produits d'entretien, cartons, palettes...
           </li>
         </ul>
       </div>
@@ -121,17 +121,17 @@
     <div >
       <h2 class="mb-4 mt-5 green-bg" >Planning</h2>
       <div class="d-flex justify-content-center align-items-center mb-5">
-        <%= image_tag "Frise.png", style:"width: 100%", class:"px-lg-5" %>
+        <%= image_tag "planning.png", style:"width: 100%", class:"px-lg-5" %>
       </div>
       <ul class="list mb-2 bullet-custom">
         <li class="my-2">
-          <b>Inscription</b> : décembre-janvier, pour s'engager dans le Défi
+          <b>Inscription</b> : de novembre à décembre 2018
         </li>
         <li class="my-2">
-          <b>Défi</b> : de janvier à juin, collecte de données, suivi personnalisé et rencontres collectives pour voir réduire vos déchets
+          <b>Défi Zéro Déchet des pro </b> : de janvier à juin 2019, collecte de données, actions collectives et accompagnement personnalisé
         </li>
         <li class="my-2">
-          <b>Clôture</b> : en juin/juillet, importante communication externe et un événement de clôture, mettant en valeur les participants et le gagnant
+          <b>Clôture</b> : Fin juin 2019, communication externe et événement de clôture, valorisant les participants et les gagnants
         </li>
       </ul>
     </div>
