--- a/app/views/pages/partenaires.html.erb
+++ b/app/views/pages/partenaires.html.erb
@@ -28,7 +28,7 @@
               Depuis 2016, nous accompagnons également des <strong>professionnels dans leur démarche d'éco-responsabilité</strong> interne. Par exemple, à la <strong>mairie du Bouscat</strong>  nous avons accompagné  des « agents référents » sur le thème de l’économie circulaire, avec en 2017 cinq ateliers-formations et la visite d'une ressourcerie, et en 2018 nous continuons sur le thème des changements de comportements sur l'énergie et les déchets.
             </p>
             <p>
-              Depuis fin 2016, nous sommes <strong>missionnés par Enedis</strong> Aquitaine-Nord pour <strong>étudier l’impact sur leurs clients</strong> qui ont été accompagnés par les Volontaires de la Transition Energétique (VTE). Il s’agit de mesurer l’évolution des consommations d’électricité et d’étudier comment les familles apprennent à mieux maîtriser leur compteur électrique et les fonctionnalités associées.
+              Depuis fin 2016, nous sommes <strong>missionnés par Enedis</strong> Aquitaine-Nord pour <strong>étudier l’impact sur leurs clients</strong> qui ont été accompagnés par les Volontaires de la Transition Energétique (VTE).
             </p>
           </div>
         </div>
