--- a/app/views/pages/pourquoi.html.erb
+++ b/app/views/pages/pourquoi.html.erb
@@ -3,11 +3,11 @@
     <div id="pourquoi1"></div>
     <h1 class="header text-primary text-center pt-5 mt-5 mb-0">Pourquoi</h1>
     <div class="title header-padding-pourquoi" >
-      <h2 class="green-bg"> Pourquoi réduire ses déchets en entreprise ? </h2>
+      <h2 class="green-bg"> Réduire nos déchets pro </h2>
     </div>
 
     <div class="row">
-      <div class="col-12 col-md-6 col-lg-4">
+      <div class="col-12 pl-2 pr-2 col-md-6 col-lg-4">
         <figure class="card card-flip">
 
           <div class="card card-size">
@@ -17,7 +17,7 @@
             <div class="card-body">
               <div class="card-text fact">
                 <p class="citation"> <strong> 140 kg de déchets / an </strong> en moyenne sont produits par un·e salarié·e de bureau</p>
-                <p class="source"><em>source : ADEME</em></p>
+                <p class="source"><em>Source : ADEME 2017</em></p>
               </div>
             </div>
           </div>
@@ -36,7 +36,7 @@
         </figure>
       </div>
 
-      <div class="col-12 col-md-6 col-lg-4">
+      <div class="col-12 pl-2 pr-2 col-md-6 col-lg-4">
         <figure class="card card-flip">
           <div class="card card-size">
             <div class="card-img-top  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("management.jpg")%>)">
@@ -45,7 +45,7 @@
             <div class="card-body">
               <div class="card-text fact">
                 <p class="citation"><strong> 77% des salariés augmentent leur fierté d'appartenance</strong> grâce au Développement Durable</p>
-                <p class="source"><em>source : Gallup 2011</em></p>
+                <p class="source"><em>Source : Gallup 2011</em></p>
               </div>
             </div>
           </div>
@@ -62,7 +62,7 @@
         </figure>
       </div>
 
-      <div class="col-12 col-md-6 col-lg-4">
+      <div class="col-12 pl-2 pr-2 col-md-6 col-lg-4">
         <figure class="card card-flip">
           <div class="card card-size">
              <div class="card-img-top  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("image.jpg")%>)">
@@ -71,7 +71,7 @@
             <div class="card-body">
               <div class="card-text fact">
                 <p class="citation"> <strong>82 % des entreprises </strong>considèrent le Développement Durable comme un facteur de différenciation</p>
-                <p class="source"><em>source: Gallup 2011</em></p>
+                <p class="source"><em>Source: Gallup 2011</em></p>
               </div>
             </div>
           </div>
@@ -88,7 +88,7 @@
         </figure>
       </div>
 
-      <div class="col-12 col-md-6 col-lg-4">
+      <div class="col-12 pl-2 pr-2 col-md-6 col-lg-4">
         <figure class="card card-flip">
           <div class="card card-size">
             <div class="card-img-top  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("economie.jpg")%>)">
@@ -96,8 +96,8 @@
             </div>
             <div class="card-body">
               <div class="card-text fact">
-                <p class="citation">Plus de <strong>14x la seule facture du prestataire déchets </strong>: c'est ce que représente le coût complet des déchets</p>
-                <p class="source"><em>Source : ADEME</em></p>
+                <p class="citation">Plus de <strong>14x la seule facture du prestataire déchets </strong>: le coût complet des déchets</p>
+                <p class="source"><em>Source : ADEME 2010</em></p>
               </div>
             </div>
           </div>
@@ -120,7 +120,7 @@
         </figure>
       </div>
 
-      <div class="col-12 col-md-6 col-lg-4">
+      <div class="col-12 pl-2 pr-2 col-md-6 col-lg-4">
         <figure class="card card-flip">
           <div class="card card-size">
             <div class="card-img-top  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("logistique.jpg")%>)">
@@ -128,7 +128,7 @@
             </div>
             <div class="card-body">
               <div class="card-text fact">
-                <p class="citation">Des contenants adaptés font gagner de <strong>2 à 10 fois plus d’espace</strong> et améliorent la logistique d'évacuation</p>
+                <p class="citation">Des contenants adaptés font gagner de <strong>2 à 10x plus d’espace</strong> et améliorent la logistique d'évacuation</p>
                 <p class="source"><em>Source : Solution Recyclage</em></p>
               </div>
             </div>
@@ -147,7 +147,7 @@
         </figure>
       </div>
 
-      <div class="col-12 col-md-6 col-lg-4">
+      <div class="col-12 pl-2 pr-2 col-md-6 col-lg-4">
         <figure class="card card-flip">
           <div class="card card-size">
             <div class="card-img-top  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("reglementation.jpg")%>)">
@@ -156,7 +156,7 @@
             <div class="card-body">
               <div class="card-text fact">
                 <p class="citation"><strong>5 flux de déchets</strong> doivent obligatoirement être triés et valorisés</p>
-                <p class="source"><em>source : "décret 5 flux" du 10 mars 2016</em></p>
+                <p class="source"><em>Source : "décret 5 flux"</em></p>
               </div>
               <div id="pourquoi2"></div>
             </div>
@@ -178,11 +178,11 @@
     </div>
 
     <div class="title mt-5 mb-4" >
-      <h2 class="green-bg"> Pourquoi ma structure s'engagerait dans ce défi ?</h2>
+      <h2 class="green-bg"> Participer au Défi Zéro Déchet des pro </h2>
     </div>
 
     <div class="row padding">
-      <div class="col-12  col-md-6 col-lg-4">
+      <div class="col-12 pl-2 pr-2  col-md-6 col-lg-4">
         <figure class="card card-flip">
           <div class="card card-size-small">
             <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("valeur.jpg")%>)">
@@ -201,7 +201,7 @@
         </figure>
       </div>
 
-      <div class="col-12  col-md-6 col-lg-4">
+      <div class="col-12 pl-2 pr-2  col-md-6 col-lg-4">
         <figure class="card card-flip">
           <div class="card card-size-small">
             <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("inclure.jpg")%>)">
@@ -220,7 +220,7 @@
         </figure>
       </div>
 
-      <div class="col-12  col-md-6 col-lg-4">
+      <div class="col-12 pl-2 pr-2  col-md-6 col-lg-4">
         <figure class="card card-flip">
           <div class="card card-size-small">
             <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("dechet.jpg")%>)">
@@ -239,7 +239,7 @@
         </figure>
       </div>
 
-      <div class="col-12  col-md-6 col-lg-4">
+      <div class="col-12 pl-2 pr-2  col-md-6 col-lg-4">
         <figure class="card card-flip">
           <div class="card card-size-small">
             <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("collectif.jpg")%>)">
@@ -258,7 +258,7 @@
         </figure>
       </div>
 
-      <div class="col-12  col-md-6 col-lg-4">
+      <div class="col-12 pl-2 pr-2  col-md-6 col-lg-4">
         <figure class="card card-flip">
           <div class="card card-size-small">
             <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("comportemental.jpg")%>)">
@@ -270,14 +270,14 @@
             <div class="card-body">
               <h3 class="card-title">Une démarche comportementale</h3>
               <div class="card-text text">
-                L'idée est de vous accompagner  pour que vous <strong>fassiez par  vous-mêmes : faire émerger vos idées</strong>, vous <strong>aider</strong> dans les choix et la mise en place de solutions. Le but est de <strong>changer les comportements dans la durée</strong>, de provoquer <strong>l'engagement et l'action</strong>.
+                L'idée est de vous accompagner  pour que vous <strong>agissiez par  vous-mêmes : faire émerger vos idées</strong>, vous <strong>aider</strong> dans les choix et la mise en place de solutions. Le but est de <strong>changer les comportements dans la durée</strong>, de provoquer <strong>l'engagement et l'action</strong>.
               </div>
             </div>
           </div>
         </figure>
       </div>
 
-      <div class="col-12  col-md-6 col-lg-4">
+      <div class="col-12 pl-2 pr-2  col-md-6 col-lg-4">
         <figure class="card card-flip">
           <div class="card card-size-small">
             <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("accompagnement.jpg")%>)">
@@ -296,7 +296,7 @@
         </figure>
       </div>
 
-      <div class="col-12  col-md-6 col-lg-4 offset-lg-4">
+      <div class="col-12 pl-2 pr-2">
         <figure class="card card-flip">
           <div class="card card-size-small">
             <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("win.jpg")%>)">
@@ -309,7 +309,7 @@
               <h3 class="card-title">Pour gagner !</h3>
               <div class="card-text text">
                 <p class="mb-1">Le défi apporte également une émulation collective car la <strong>compétition</strong> favorise l'envie de <strong>s'améliorer</strong> et de finir gagnant.</p>
-                <p>La cerise sur la gâteau, en plus de tous les autres avantages du Défi, c'est de gagner ! <strong>La plus belle évolution</strong> (technique et comportementale) donnera un <strong>vainqueur</strong>, qui sera mis en avant dans toute la communication externe.</p>
+                <p>La cerise sur la gâteau, en plus de tous les autres avantages du Défi, c'est de gagner ! <strong>La plus belle évolution</strong> (réduction des déchets ultimes et changement de comportements) donnera un <strong>vainqueur</strong>, qui sera mis en avant dans toute la communication externe.</p>
               </div>
             </div>
           </div>
