--- a/app/views/pages/soutenir.html.erb
+++ b/app/views/pages/soutenir.html.erb
@@ -7,18 +7,18 @@
 
       <div class="row">
         <div class="col-lg-6 px-4">
-          <h2 class="mt-5 mb-4 green-bg">Mécenat</h2>
+          <h2 class="mt-5 mb-4 green-bg">Mécener</h2>
           <div id="soutenir2"></div>
           <div class="text">
-            <p class="mb-0">En vous engageant à nos côtés par votre <b>soutien</b>, votre entreprise sera <b>associée à la démarche d'exemplarité et d'innovation</b> de ce projet en matière de réduction des déchets, et bénéficiera d'une <b>réduction fiscale</b> de 60% de votre don sur votre impôt sur les sociétés. Vous pouvez aussi choisir un <b>soutien en nature</b> (prêt ou achat de matériel, fournitures etc...) <b>ou en compétences</b>.</p>
-            <p class="mb-0">Pour en savoir plus sur vos avantages à nous soutenir, et mieux connaître nos besoins, consultez le <%= link_to "dossier de mécenat", dossier_de_mecenat_path %>.</p>
+            <p class="mb-0">En vous engageant à nos côtés par votre <b>soutien</b>, votre entreprise sera <b>associée à la démarche d'exemplarité et d'innovation</b> de ce projet en matière de réduction des déchets, et bénéficiera d'une <b>réduction fiscale</b> de 60% de votre don sur votre impôt sur les sociétés. Vous pouvez aussi choisir un <b>soutien en nature</b> (prêt ou achat de matériel, fournitures...) <b>ou en compétences</b>.</p>
+            <p class="mb-0">Pour en savoir plus sur vos avantages à nous soutenir, et mieux connaître nos besoins, consultez le <%= link_to "dossier de mécénat", dossier_de_mecenat_path %>.</p>
           </div>
         </div>
 
         <div class="col-lg-6 px-4">
           <div>
             <div id="soutenir4"></div>
-            <h2 class="mt-5 mb-4 green-bg">Témoignage</h2>
+            <h2 class="mt-5 mb-4 green-bg">Témoigner</h2>
             <p class='mb-0 text'>Vous êtes un professionnel.le <b>déjà engagé.e</b> dans une démarche de réduction des déchets ? Vous avez mis en place plusieurs gestes dans votre structure ? Vous êtes une <b>entreprise éco exemplaire</b> ?</p>
             <p class="text mb-0"><b>Partagez votre expérience</b> ! Mettez en valeur votre entreprise et vos employés ! Votre témoignage sera inspirant pour d'autres, qui bénéficieront de votre retour d'expérience et voudront s'engager également.
             </p>
@@ -31,7 +31,7 @@
 
       <div class="row">
         <div class="col-lg-6 px-4">
-          <h2 class="mt-5 mb-4 green-bg">Don</h2>
+          <h2 class="mt-5 mb-4 green-bg">Donner</h2>
           <div class="d-flex flex-column justify-content-center align-items-center">
             <%= image_tag "Don.jpg", width:200, height: 200 %>
             <p class="text pt-2">
@@ -42,14 +42,14 @@
         </div>
         <div class="col-lg-6 px-4">
           <div id="soutenir3"></div>
-          <h2 class="mt-5 mb-4 green-bg">Partage</h2>
+          <h2 class="mt-5 mb-4 green-bg">Partager / communiquer</h2>
           <div class="d-flex flex-column justify-content-center">
             <p class="text">
               <b>Faîtes connaître le Défi</b> ! Dans vos différents réseaux personnels et professionnels, vos outils de communication etc. Voici des liens et outils que vous pouvez utiliser.
             </p>
             <ul class="list mb-4 bullet-custom">
               <li class="my-2">
-                <%= link_to "Dossier de mécenat", dossier_de_mecenat_path %>
+                <%= link_to "Dossier de mécénat", dossier_de_mecenat_path %>
               </li>
               <li class="my-2">
                 <%= link_to "Charte graphique", charte_graphique_path %>
