--- a/app/views/shared/_navbar_primary.html.erb
+++ b/app/views/shared/_navbar_primary.html.erb
@@ -19,8 +19,8 @@
           POURQUOI
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <%= link_to "Pourquoi réduire ses déchets ?", pourquoi_path(anchor: "pourquoi1"), class:"dropdown-item text-primary"%>
-          <%= link_to "Pourquoi mon entreprise ?", pourquoi_path(anchor: "pourquoi2"), class:"dropdown-item text-primary"%>
+          <%= link_to "Réduire nos déchets pros", pourquoi_path(anchor: "pourquoi1"), class:"dropdown-item text-primary"%>
+          <%= link_to "Participer au Défi Zéro Déchet des pro", pourquoi_path(anchor: "pourquoi2"), class:"dropdown-item text-primary"%>
         </div>
       </li>
       <li class="nav-item m-2 dropdown bold-link">
@@ -28,7 +28,7 @@
           COMMENT
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <%= link_to "Les objectifs du défi", comment_path(anchor: "comment1"), class:"dropdown-item text-primary"%>
+          <%= link_to "Objectifs du Défi Zéro Déchet des pro", comment_path(anchor: "comment1"), class:"dropdown-item text-primary"%>
           <%= link_to "Les structures éligibles", comment_path(anchor: "comment2"), class:"dropdown-item text-primary" %>
           <%= link_to "Les déchets concernés", comment_path(anchor: "comment2"), class:"dropdown-item text-primary" %>
           <%= link_to "Comment ça se passe ?", comment_path(anchor: "comment4"), class:"dropdown-item text-primary" %>
@@ -44,10 +44,10 @@
           SOUTENIR
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <%= link_to "Mécénat",soutenir_path(anchor: "soutenir1"), class:"dropdown-item text-primary" %>
-          <%= link_to "Don", soutenir_path(anchor: "soutenir2"), class:"dropdown-item text-primary" %>
-          <%= link_to "Partage", soutenir_path(anchor: "soutenir3"), class:"dropdown-item text-primary" %>
-          <%= link_to "Témoignage", soutenir_path(anchor: "soutenir4"), class:"dropdown-item text-primary" %>
+          <%= link_to "Mécéner",soutenir_path(anchor: "soutenir1"), class:"dropdown-item text-primary" %>
+          <%= link_to "Témoignager", soutenir_path(anchor: "soutenir4"), class:"dropdown-item text-primary" %>
+          <%= link_to "Donner", soutenir_path(anchor: "soutenir2"), class:"dropdown-item text-primary" %>
+          <%= link_to "Partager / communiquer", soutenir_path(anchor: "soutenir3"), class:"dropdown-item text-primary" %>
         </div>
       </li>
     </ul>
