--- a/app/views/pages/comment.html.erb
+++ b/app/views/pages/comment.html.erb
@@ -6,28 +6,28 @@
       <div class="row">
         <div class="col-lg-6">
           <h2 class="green-bg mb-4">Objectifs du Défi Zéro Déchet des pro</h2>
-          <p class="text">Le Défi consiste en l'<b>accompagnement structurel et personnalisé</b> des établissements participants dans <b>l’étude et la mise en place de solutions</b> techniques, organisationnelles et comportementales pour réduire leurs déchets.</p>
+          <p class="text">Le Défi Zéro Déchet des pro consiste en l'<b>accompagnement structurel et personnalisé</b> des structures participantes dans <b>l’étude et la mise en place de solutions</b> techniques, organisationnelles et comportementales pour réduire leurs déchets de fonctionnement.</p>
           <ul class="list mb-5 bullet-custom">
             <li class="my-2">
-              <strong>Réduire la production de déchets de fonctionnement de 10%</strong>
+              <strong>Réduire de 10% la production de vos déchets de fonctionnement</strong>
             </li>
             <li class="my-2">
               <strong>Faire agir la majorité des salarié·e·s de votre structure sur au moins 5 actions</strong>
             </li>
             <li class="my-2">
-              Réduire les coûts de gestion des déchets
+              Réduire vos coûts de gestion des déchets
             </li>
             <li class="my-2">
-              Développer la culture d’établissement autour des déchets
+              Développer la culture des éco-gestes et des déchets dans votre structure
             </li>
             <li class="my-2">
-              Augmenter la valorisation matière, organique voire énergétique des déchets produits
+              Augmenter la valorisation matière, organique voire énergétique de vos déchets
             </li>
             <li class="my-2">
-              Valoriser publiquement les démarches exemplaires des établissements participants
+              Valoriser publiquement les démarches exemplaires des structures participantes
             </li>
             <li class="my-2">
-              Donner une nouvelle représentation positive des déchets comme ressources
+              Donner une nouvelle image positive des déchets comme ressources
             </li>
           </ul>
           <div id="comment2"></div>
@@ -50,10 +50,10 @@
         <div id="comment4"></div>
         <h2 class="green-bg mb-4 mt-5" >Les structures éligibles</h2>
         <div class="text">
-          <p class="mb-2">Tout professionnel souhaitant travailler sur ses déchets de fonctionnement est le bienvenu : <b>public ou privé</b>, quelque soit son activité ou sa taille.
-          Pour ce premier Défi, les structures participantes doivent résider dans <b>le territoire de Bordeaux Métropole</b>.</p>
-          <p class="m-0">L'objectif est d'étendre le Défi à de nouveaux territoires.</p>
-          <p class="m-0">Vous aimeriez participer mais n'êtes pas dans la zone géographique concernée ? </p>
+          <p class="mb-2">Toute structure professionnelle d’au moins 2 personnes souhaitant travailler sur ses déchets de fonctionnement est la bienvenue : <b>publique ou privée</b>, quelque soit son activité ou sa taille.
+          Pour ce premier Défi Zéro Déchet des pro, les structures participantes doivent être domiciliées dans <b>le territoire de Bordeaux Métropole</b>.</p>
+          <p class="m-0">Notre objectif est d'étendre le Défi Zéro Déchet des Pro à d'autres territoires.</p>
+          <p class="m-0">Vous souhaiteriez participer mais n'êtes pas sur Bordeaux Métropole ? </p>
           <p class="d-flex justify-content-center mt-3">
             <%= link_to "Contactez-nous !", contact_path, class:"btn btn-primary text-white bold"  %>
           </p>
@@ -66,19 +66,19 @@
         <h2 class="green-bg mb-4 mt-5" >Les déchets concernés</h2>
         <ul class="list mb-0 bullet-custom">
           <li class="my-2">
-            Emballages (bouteilles, canettes etc)
+            Emballages (bouteilles, canettes...)
           </li>
           <li class="my-2">
-            Fournitures de bureau (papiers, stylos etc)
+            Fournitures de bureau (papiers, stylos...)
           </li>
           <li class="my-2">
-            Matériel informatique (ordinateurs, téléphones etc)
+            Matériel informatique (ordinateurs, téléphones...)
           </li>
           <li class="my-2">
-            Vaisselle (gobelets de café, verre en plastique pour la fontaine à eau etc)
+            Vaisselle (gobelets de café et de fontaine à eau...)
           </li>
           <li class="my-2">
-            Biodéchets (marc de café etc)
+            Biodéchets (marc de café...)
           </li>
           <li class="my-2">
             Mobilier, mégots, ampoules, piles, cartouches d'encre, produits d'entretien, cartons, palettes...
@@ -94,28 +94,28 @@
     <div>
       <h2 class="green-bg mt-5 mb-4">Comment ça se passe ?</h2>
       <h5 class="mb-2">Collecte de données</h5>
-      <p>Sur une durée de 6 mois, les structures devront <b>mesurer</b> régulièrement leur <b>production de déchets</b> et évaluer leurs <b>comportement</b>, en remplissant des formulaires sur ce site (espace participant). Elles pourront ainsi visualiser leur <b>progression</b> et leur <b>classement</b> par rapport aux autres.</p>
-      <h5 class="mb-2 mt-3">Activités collectives</h5>
+      <p>Régulièrement, durant 6 mois, les structures participantes <b>mesurent</b> leur <b>production de déchets</b> et évaluent les <b> changements de comportements</b>, en remplissant des formulaires sur ce site internet (Espace participant). Elles pourront ainsi visualiser leur <b>progression</b> et leur <b>classement</b> par rapport aux autres.</p>
+      <h5 class="mb-2 mt-3">Actions collectives</h5>
       <ul class="list mb-2 bullet-custom">
         <li class="my-2">
-          <b>Ateliers-formations échanges</b> (enjeux-problématiques, causes-conséquences, acteurs de la filière, réglementation, solutions globales, locales et individuelles, avancement dans le défi…)
+          <b>Ateliers-formations / échanges</b> (enjeux-problématiques, causes-conséquences, acteurs de la filière, réglementation, solutions globales, locales et individuelles, avancement dans le Défi Zéro Déchet des pro...)
         </li>
         <li class="my-2">
-          <b>Rencontres et visites</b> d’acteurs sur site (installations techniques de prévention et gestion des déchets, établissements exemplaires…) et retours d'expériences hors-site de pairs.
+          <b>Rencontres / visites</b> d’acteurs sur site (installations techniques de prévention et gestion des déchets, établissements exemplaires…) et retours d'expériences de structures exemplaires.
         </li>
         <li class="my-2">
           <b>Ateliers pratiques</b> (outils de communication-sensibilisation, fabrication de produits…)
         </li>
         <li class="my-2">
-          Serious game pour adultes sur les déchets (jeu de société, grand jeu, animation ludique…)
+          <b>Serious game</b> sur les déchets (jeu de société, grand jeu, animation ludique…)
         </li>
         <li class="my-2">
-          Durant le défi, des "<b>sous-défis</b>" facultatifs sont proposés aux établissements afin de leur offrir une autre forme de stimulation pour agir concrètement en interne sur les déchets
+          Durant le Défi Zéro Déchet des pro, des "<b>sous-défis</b>" facultatifs sont proposés aux participants afin d'augmenter la mobilisation interne sur les déchets
         </li>
       </ul>
       <div id="comment5"></div>
-      <h5 class="mb-2 mt-3">Accompagnement individuel</h5>
-      <p>Un suivi régulier sera effectué avec chaque structure pour évaluer sa progression dans la démarche et l'accompagner dans la mise en place des actions : revue des données collectées, échanges par mail et téléphone.</p>
+      <h5 class="mb-2 mt-3">Accompagnement personnalisé</h5>
+      <p>Un suivi régulier est proposé à chaque structure participante pour évaluer sa progression dans la démarche et l'accompagner dans la mise en place des actions : revue des données collectées, échanges par mail et téléphone.</p>
     </div>
     <div id="comment6"></div>
     <div >
@@ -137,14 +137,14 @@
     </div>
     <div>
       <h2 class="mb-4 mt-5 green-bg" >Combien ça coûte ?</h2>
-      <p>La participation au Défi comprend un <b>prix forfaitaire</b> de 150€, <b>plus</b> un tarif qui dépend de la taille de votre établissement : 10€ par salarié.e.</p>
+      <p>La participation au Défi Zéro Déchet des pro comprend un <b>tarif forfaitaire</b> de base de 150 €, <b>plus</b> un tarif qui dépend de la taille de votre structure : 10 € par salarié.e. Pour les structures de plus de 100 salarié·e·s, une segmentation tarifaire par direction / département / établissement est possible.</p>
       <h5 class="my-4 ml-3">Exemples :</h5>
       <ul class="list bullet-custom  bullet-primary no-margin">
         <li class="my-2">
-          mon organisation comprend 10 employés, la participation au Défi sera de 150+10x10 = 250€
+          Ma structure comprend 10 salarié.e.s, le tarif est de 150 € + 10 € x 10 salarié.e.s = 250 €
         </li>
         <li class="mt-2 padding">
-          mon organisation comprend 100 employés, la participation au Défi sera de 150+10x100 = 1150€
+          Ma structure comprend 100 salarié.e.s, le tarif est de 150 € + 10 € x 100 salarié.e.s = 1 150 €
         </li>
       </ul>
     </div>
