--- a/app/views/pages/pourquoi.html.erb
+++ b/app/views/pages/pourquoi.html.erb
@@ -309,7 +309,7 @@
               <h3 class="card-title">Pour gagner !</h3>
               <div class="card-text text">
                 <p class="mb-1">Le Défi Zéro Déchet des pro apporte également une émulation collective car la <strong>compétition</strong> favorise l'envie de <strong>s'améliorer</strong> et de finir gagnant.</p>
-                <p>La cerise sur la gâteau, en plus de tous les autres avantages du Défi Zéro Déchet des pro, c'est de gagner ! <strong>La plus belle évolution</strong> (réduction des déchets ultimes et changement de comportements) donnera un <strong>vainqueur</strong>, qui sera mis en avant dans toute la communication externe.</p>
+                <p>La cerise sur la gâteau, en plus de tous les autres avantages du Défi Zéro Déchet des pro, c'est de gagner ! <strong>La plus belle évolution</strong> (réduction des déchets ultimes et changement de comportements) donnera un <strong>vainqueur</strong>, qui sera mis en avant dans nos actions de communication externe.</p>
               </div>
             </div>
           </div>
